--- a/index.html
+++ b/index.html
@@ -56,11 +56,35 @@
                         security controls to ensure that data at Mozilla is protected consistently across the organization.
                     </p>
                     <br />
-                    <h2>Why?</h2>
-                    <p> Servers mostly have bad default for SSL/TLS. OpSec wrote and maintains standard configuration guidelines at
-                        <a href="https://wiki.mozilla.org/Security/Server_Side_TLS">Server Side TLS</a></p>
+                    <h2>Server Side TLS</h2>
+                    <p> Most servers ship with bad SSL/TLS default settings. Good conf is hard to obtain, so OpSec wrote and maintains the
+                        <a href="https://wiki.mozilla.org/Security/Server_Side_TLS">Server Side TLS</a> guidelines.</p>
 				</section>
 
+				<section>
+                    <h2>We wrote <a href="https://github.com/jvehent/cipherscan">Cipherscan</a></h2>
+					<pre><code data-trim contenteditable>
+$ ./cipherscan jve.linuxwall.info
+...................
+Target: jve.linuxwall.info:443
+
+prio  ciphersuite                  protocols              pfs_keysize
+1     ECDHE-RSA-AES128-GCM-SHA256  TLSv1.2                ECDH,P-256,256bits
+2     ECDHE-RSA-AES256-GCM-SHA384  TLSv1.2                ECDH,P-256,256bits
+3     DHE-RSA-AES128-GCM-SHA256    TLSv1.2                DH,2048bits
+4     DHE-RSA-AES256-GCM-SHA384    TLSv1.2                DH,2048bits
+5     ECDHE-RSA-AES128-SHA256      TLSv1.2                ECDH,P-256,256bits
+[.....]
+17    AES256-SHA256                TLSv1.2
+18    AES256-SHA                   TLSv1,TLSv1.1,TLSv1.2
+
+Certificate: trusted, 2048 bit, sha256WithRSAEncryption signature
+TLS ticket lifetime hint: 300
+OCSP stapling: not supported
+Server side cipher ordering
+                    </code></pre>
+                    <p>to help operators understand and improve their configurations.</p>
+                </section>
 				<section>
                     <h2>A bit of history...</h2>
                     <h3>1969: ARPAnet</h3>
@@ -170,15 +194,30 @@ reliability between two communicating applications.
 				</section>
 
 				<section>
-					<h2>Problems</h2>
+					<h2>...and an equal number of problems</h2>
 					<ul>
-						<li>Immensely difficult to implement in a fast way. Only a handful of libraries.</li>
+						<li>Immensely difficult to implement in a fast and secure way</li>
 						<li>Attack surface is huge: cryptanalysis, message padding, timing attacks, implementation bugs, (re)negociation, downgrade, ...</li>
-						<li>Billions of eCommerce dollars rely on the security of one network protocol.</li>
+						<li>Billions of eCommerce dollars rely on it: huge pressure to fix bugs, no time to redesign.</li>
+						<li>Improving TLS often translates into adding <b>more</b> complexity.
+                            More extensions, more ciphers, more edge cases, ... TLS is <b>not</b> getting simpler any time soon!</li>
 					</ul>
                     <br /><br />
                     <p>We must use SSL/TLS. And we must do it right.</p>
 				</section>
+
+				<section>
+					<h2>Doing TLS right</h2>
+                    <h3>The story of Cipherscan<br />and Server Side TLS</h3>
+                    <p>Starring:</p>
+                    <ul>
+                        <li>Ciphersuites ordering</li>
+                        <li>Perfect Forward Secrecy and Diffie-Hellman</li>
+                        <li>AES, in cpu, in software, with GCM or CBC</li>
+                        <li>OCSP Stapling</li>
+                        <li>Session tickets, performance vs security</li>
+                    <ul>
+                </section>
 
 				<section data-markdown>
 					<script type="text/template">
